# redis-test

./: Cargo.toml  README.md
actix-mongo/src/errors/: errors.rs
actix-new/src/db/: db_mongo.rs  mongo_connection.rs
actix-new/src/error/: api_error.rs
actix-rusqlite-persons/: .env
actix-rusqlite-persons/DB/: persons_DB.db
actix-rusqlite-persons/src/database/: db.rs  mod.rs
actix-rusqlite-persons/src/handlers/: person_handlers.rs
actix-rusqlite-persons/src/models/: mod.rs  person.rs
actix-sqlite-diesel-persons/migrations/20200424012402_create_persons/: up.sql
actix-sqlite-persons/DB/: persons_DB.db
actix-sqlx-postgresql/views/: add_person.html  base.html  index.html  modify_person.html  one_person.html  persons.html
more-jpeg/templates/: index.html.liquid
my-web-app-tide/: Cargo.toml
my-web-app-tide/src/: main.rs
my-web-app-tide/templates/: base.html.tera  genres.html.tera
rocket-tst/: Cargo.toml
seed-server/: Cargo.toml  Makefile.toml
seed-server/server/: Cargo.toml
seed-server/shared/: Cargo.toml
seed-warp-sqlx-postgres/client/: Cargo.toml  index.html
seed-warp-sqlx-postgres/client/src/: lib.rs
seed-warp-sqlx-postgres/shared/: Cargo.toml
src/: main.rs
tide-sqlx/DB/: persons_DB
tide-sqlx/src/tests/: mod.rs  (+1 more)
tide-test/: Cargo.toml
warp-api/src/: models.rs
warp-sqlx-postgres/: =  Cargo.toml
warp-sqlx-postgres/src/: db.rs  errors.rs
warp-sqlx-postgres/static/: style.css
warp-sqlx-yew/server/: Cargo.toml
warp-sqlx-yew/shared/: Cargo.toml
yew-test/: db.rs
yew-test/src/: dlgmodal.rs
yew_dev_viewer/src/: devices.rs
(+43 files in other folders)
