# /client/Cargo.toml
[package]
name = "client"
version = "0.1.0"
authors = ["Léon GENGOUX <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "^0.7.0"
serde = { version = "^1.0.110", features = ['derive'] }
wasm-bindgen = "0.2.63"
web-sys = "0.3.40"

shared = { path = "../shared" }

#[dependencies.web-sys]
#version = "0.3.4"
#features = [
#  'Document',
#  'Element',
#  'HtmlElement',
#  'Node',
#  'Window',
#]








